Add ZGC as a GC option and make it the default