@@ -6,6 +6,7 @@ public enum GarbageCollectorType {
     G1("-XX:+UseG1GC", "-XX:MaxGCPauseMillis=1", "-XX:GCTimeRatio=1"),
     G1_LongPause("-XX:+UseG1GC", "-XX:MaxGCPauseMillis=5", "-XX:GCTimeRatio=1"),
     G1_Base("-XX:+UseG1GC"),
+    ZGC("-XX:+UseZGC"),
     Serial("-XX:+UseSerialGC"),
     Parallel("-XX:+UseParallelGC"),
     Serial_PauseGoal("-XX:+UseSerialGC", "-XX:MaxGCPauseMillis=5"),
